# Battleboats

./: .gitignore  README.md  main.py  pyproject.toml  temp.md
WW2PacificNavalEnv/: readme.md
WW2PacificNavalEnv/core/: gameEngine.py  main.py  player.py
WW2PacificNavalEnv/core/map/: Map.py
WW2PacificNavalEnv/core/shipyard/: ship.py  ship_stats.py  ship_type.py
battleboats/agents/: debug_plot.py  godmode_mcts.py  heuristics.py  random_agent.py
battleboats/core/: gameEngine.py  main.py
battleboats/core/config/: .~lock.attackModifiers.csv#  .~lock.shipTypes.csv#  generate_map.py  mapConfigTraining.yaml
battleboats/envs/: action_masks.py  battleboats_aec.py  observation.py
battleboats/training/: dataset.py  model.py  policy.py  ppo_buffer.py  ppo_update.py  rollout.py  split.py  transformer.py
docs/: bc_findings.md  combat_and_scouting.md  heuristic_design.md  heuristic_equations.md  sota_research_2026-05-20.md
scripts/: benchmark_godmode_mcts.py  build_token_index.py  debug_bc.py  decisiveness_sweep.py  harvest.py  heuristic_monotonicity.py  make_sample_plot.py  mcts_probes.py  model_main.py  move_scores.py  play_human_vs_random.py  plot_bc_training.py  plot_decisiveness_sweep.py  plot_ppo_training.py  plot_regression.py  plot_weight_history.py  replay_game.py  scenario_generator.py  test_train.py  trade_study.py  trade_study_iterations.sh  train_bc.py  train_mlp.py  train_ppo.py  train_smoke.py  train_transformer.py  tune_heuristic_weight.py
tests/: test_clone.py  test_env_smoke.py  test_get_state.py  test_godmode_mcts.py  test_heuristics.py
