[tool.poetry]
name = "battleboats"
version = "0.1.0"
description = "strategy game for ML experimentation"
authors = ["nick_russo22"]
readme = "README.md"
packages = [{ include = "battleboats" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
numpy = "^2.4.4"
gymnasium = "^1.2.3"
matplotlib = "^3.10.8"
# torch is intentionally installed out-of-band via pip with the ROCm
# wheel index — see README. Poetry's msgpack cache can't handle the
# multi-GB ROCm wheel and the dep resolution drags in triton-rocm
# whose wheel also fails poetry's strict validation. After `poetry
# install`, run:
#   poetry run pip install torch==2.10.0 \
#       --index-url https://download.pytorch.org/whl/rocm7.0 \
#       --force-reinstall --no-cache-dir
# Constraint allows 2.10 because the newest cp312 ROCm wheel is
# 2.10.0+rocm7.0 (no 2.11/2.12 ROCm build exists yet). Keep this <=
# the installed ROCm torch or `poetry install` will pull a CUDA wheel.
torch = ">=2.10.0,<3.0.0"
pyyaml = "^6.0.3"
seaborn = "^0.13.2"
pytest = "^9.0.3"
pettingzoo = "^1.26.1"
scikit-learn = "^1.8.0"
wandb = "^0.27.0"
weave = "^0.52.42"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
isort = "^8.0.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ["E203", "E501", "W503"]
max-line-length = 127